--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
               uri: lb://USERS-SERVICE
               predicates:
                 - Path=/auth/**,/users/**
+            - id: appointment-service
+              uri: lb://APPOINTMENT-SERVICE
+              predicates:
+                - Path=/appointments/**
 
 
           discovery:
